--- a/allianceauth_oidc/templates/allianceauth_oidc/denied.html
+++ b/allianceauth_oidc/templates/allianceauth_oidc/denied.html
@@ -63,8 +63,8 @@
                 </svg>
               </div>
               <h3>{{ reason }}</h3>
-              <p>If you believe this is in error please contact the administrators. {{ error_code }}</p>
-              <p><small>This action has been logged</small></p>
+              <p>{% translate "If you believe this is in error please contact the administrators." %} {{ error_code }}</p>
+              <p><small>{% translate "This action has been logged" %}</small></p>
               <p><span class="label label-warning">{{ request.user.username }}</span> <span class="label label-warning">oidc:authenticate</span></p>
             </div>
           </div>
