rushed update to bs5 and dependcies

--- a/allianceauth_oidc/templates/allianceauth_oidc/denied.html
+++ b/allianceauth_oidc/templates/allianceauth_oidc/denied.html
@@ -1,4 +1,4 @@
-{% extends 'allianceauth/base.html' %}
+{% extends 'allianceauth/base-bs5.html' %}
 {% load i18n %}
 {% block page_title %}{{page_title}}{% endblock %}
 {% block extra_css %}
